# My7z

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/cn/wqgallery/my7z/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/cn/wqgallery/my7z/: MainActivity.java  ZipCode.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/cn/wqgallery/my7z/: ExampleUnitTest.java
